--- a/Certificering Freecodecamp/Tributepage copy/style.css
+++ b/Certificering Freecodecamp/Tributepage copy/style.css
@@ -1,30 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
-
-* {
-    box-sizing: border-box;
-}
-body{
-    font-family: 'Ubuntu', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+.content-box-gray .content {
     overflow: hidden;
-    margin: 0;
+    padding: 10px;
+    font-size: 15px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border: 1px solid gray;
+    color: #3385FF;
 }
 
-.bg {
-    background: url('Trouwfoto.jpg') no-repeat center center/cover;
-    position: absolute;
-    top: -30;
-    left: -30;
-    width: calc(100vw + 60px);
-    height: calc(100vw + 60px);
-    z-index: -1;
-    filter: blur(0px);
-}
-
-.loading-text{
-    font-size: 50px;
-    color: #fff;
+.content-box-gray .title {
+    height: 30px;
+    line-height: 30px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background: gray;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: verdana;
+    display: block;
+    color: white;
+    display: block;
+    padding: 10px;
+    border: 1px solid gray;
+    border-bottom: none;
 }
