--- a/Certificering Freecodecamp/Tributepage/style.css
+++ b/Certificering Freecodecamp/Tributepage/style.css
@@ -1,44 +1,50 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
-body {
-    background-color: #D6EAF8;
-}
-
-#bannerimage {
-    width: 100%;
-    height: 350px;
-    background-color: purple;
-    background-position: center;
-    background-image: url(https://netskymusic.com/img/netsky_logo.svg);
-}
-
-#bg-video {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-}
-
-.content {
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
-}
-
-#btn_pause_bg {
-    width: 200px;
-    font-size: 18px;
-    padding: 10px;
-    border: none;
-    background: #000;
-    color: #fff;
-    cursor: pointer;
-}
-
-#btn_pause_bg:hover {
-    background: #ddd;
-    color: black;
-}
+    @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
+    html {
+        font-size: 15px;
+        font-family: sans-serif;
+    }
+    
+    .bg {
+        background: url(https://i.imgur.com/qfCLlUH.png);
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
+    
+    #main {
+        font-size: 15px;
+        font-family: sans-serif;
+    }
+    
+    .tribute-info {
+        background-color: #fff;
+        padding: 30px;
+    }
+    
+    .body {
+        padding-left: 30px;
+        padding-right: 30px;
+        font-style: whitesmoke !important;
+        font-size: 35px;
+    }
+    
+    #img-div {
+        justify-content: center;
+        display: flex;
+    }
+    
+    .title {
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        font-size: 45px;
+    }
+    
+    .title .subtitle {
+        background-color: whitesmoke;
+    }
+    
+    img {
+        border-radius: 50%;
+        width: 250px;
+        height: 250px;
+    }
