--- a/Certificering Freecodecamp/Tributepage/style.css
+++ b/Certificering Freecodecamp/Tributepage/style.css
@@ -1,37 +1,90 @@
         @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
-    @media(min-width:468px) {
+         :root {
+            font-size: 15px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
         .containerheader {
             display: flex;
             flex-direction: column;
         }
+        
         .containerheader div {
             padding: 10px;
             margin-bottom: 30px;
             border-bottom: 3px #ccc solid;
         }
-        /* containerheaderbox 1 */
+        
         .headbanner {
             flex: 1;
             order: 1;
             align-items: center;
             flex-basis: 100%;
         }
+        
         .containerbody {
-            display: flex;
+            display: grid;
             justify-content: center;
             align-items: center;
-            align-self: center;
         }
+        
         .image {
             border-radius: 50%;
             align-items: center;
         }
-        /* .title {
-flex: 2;
-order: 2;
-background: url(https://i.imgur.com/qfCLlUH.png);
-background-repeat: no-repeat;
-background-size: 100%;
-} */
-        /* containerheaderbox 2 */
-        /* containerheaderbox 3 */
+        
+        .bodybox {
+            display: grid;
+            justify-content: center;
+            margin: 50px;
+            padding: 10px;
+            text-align: center;
+        }
+        
+        #title {
+            display: grid;
+            justify-content: center;
+            background-color: darkgray;
+        }
+        
+        @media only screen and (max-width: 768px) {
+            #img-div {
+                display: grid;
+                justify-content: center;
+            }
+            #image {
+                border-radius: 50%;
+                width: 300px;
+                height: 300px;
+            }
+        }
+        
+        #img-div {
+            display: grid;
+            justify-content: center;
+        }
+        
+        #image {
+            border-radius: 50%;
+        }
+        
+        #img-caption {
+            font-size: 10;
+            text-align: center;
+            font-style: italic;
+        }
+        
+        .containerfooter {
+            display: grid;
+        }
+        
+        .footerbox {
+            font-size: 10px;
+            display: grid;
+            align-items: center;
+            text-align: center;
+        }
+        /* background: url(https://i.imgur.com/qfCLlUH.png);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        opacity: 10%; */
