--- a/Certificering Freecodecamp/Survey/style.css
+++ b/Certificering Freecodecamp/Survey/style.css
@@ -1,5 +1,69 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
-.content-box-gray .content {
+* {
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: monospace;
+}
+
+.text-bar {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: white;
+    border: 0;
+    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+input[type=submit] {
+    /* remove default behavior */
+    appearance: none;
+    -webkit-appearance: none;
+    /* usual styles */
+    padding: 10px;
+    border: none;
+    background-color: #3F51B5;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+    width: 100%;
+}
+
+input[type=text],
+input[type=email],
+input[type=number],
+input[type=radio]:focus {
+    padding: 10px;
+    border: 0;
+    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+}
+
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=number]:focus,
+input[type=radio]:focus {
+    background-color: #d0acf8df;
+    border-color: #000;
+}
+
+.radio_buttons {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+label {
+    margin-top: 10px;
+}
+
+.container {
+    display: grid;
+    justify-content: center;
+    background-color: azure;
+    border: 3px solid black;
+    box-shadow: black;
+}
+
+.header .content-box-gray .content {
     overflow: hidden;
     padding: 10px;
     font-size: 15px;
