--- a/Certificering Freecodecamp/Survey/style.css
+++ b/Certificering Freecodecamp/Survey/style.css
@@ -31,7 +31,8 @@ input[type=submit] {
 input[type=text],
 input[type=email],
 input[type=number],
-input[type=radio]:focus {
+input[type=radio],
+input[type=checkbox] {
     padding: 10px;
     border: 0;
     box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
@@ -40,7 +41,8 @@ input[type=radio]:focus {
 input[type=text]:focus,
 input[type=email]:focus,
 input[type=number]:focus,
-input[type=radio]:focus {
+input[type=radio]:focus,
+input[type=checkbox]:focus {
     background-color: #d0acf8df;
     border-color: #000;
 }
@@ -53,6 +55,16 @@ input[type=radio]:focus {
 
 label {
     margin-top: 10px;
+}
+
+textarea {
+    width: 100%;
+    resize: vertical;
+    padding: 15px;
+    border-radius: 15px;
+    border: 0;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+    height: 150px;
 }
 
 .container {
