--- a/webdev/flix/app/views/movies/index.html.erb
+++ b/webdev/flix/app/views/movies/index.html.erb
@@ -7,6 +7,10 @@
       <h2>
         <%= link_to movie.title, movie %>
       </h2>
+        <div class="reviews">
+        <%= link_to pluralize(movie.reviews.size, "review"),
+            movie_reviews_path(movie) %>
+        </div>
       <h3>
         <%= total_gross(movie) %>
       </h3>
