--- a/webdev/flix/app/views/movies/show.html.erb
+++ b/webdev/flix/app/views/movies/show.html.erb
@@ -24,6 +24,7 @@
       <td><%= total_gross(@movie) %></td>
       </tr>
     </table>
+    <%= link_to "Write review", new_movie_review_path(@movie),class:"review" %>
   </div>
 </section>
 <section class="admin">
