edit/delete toevoeging review! Co-authored-by: Redmar Kerkhoff <redmar@users.noreply.github.com>

--- a/webdev/flix/app/views/reviews/index.html.erb
+++ b/webdev/flix/app/views/reviews/index.html.erb
@@ -13,5 +13,9 @@
         <%= review.comment %>
       </p>
     </li>
+    <%= link_to "Edit", edit_movie_review_path(@movie, review), class: "button" %>
+     <%= link_to "Delete", movie_review_path(@movie, review), class: "button",
+      method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
 </ul>
+
