toevoegen opties voor updaten/deleten reviews

--- a/webdev/flix/app/views/movies/show.html.erb
+++ b/webdev/flix/app/views/movies/show.html.erb
@@ -7,6 +7,10 @@
     <h2>
       <%= year_of(@movie) %> &bull; <%= @movie.rating %>
     </h2>
+    <div class="reviews">
+    <%= link_to pluralize(@movie.reviews.size, "review"),
+        movie_reviews_path(@movie) %>
+    </div>
     <p>
       <%= @movie.description %>
     </p>
@@ -32,3 +36,4 @@
   <%= link_to "Delete", movie_path(@movie), class: "button",
   method: :delete, data: { confirm: 'Are you sure?' } %>
 </section>
+
