--- a/webdev/flix/app/views/reviews/_show.html.erb
+++ b/webdev/flix/app/views/reviews/_show.html.erb
@@ -1,5 +1,5 @@
 <ul class="reviews">
-  <% @reviews.each do |review| %>
+  <% @movie.reviews.each do |review| %>
     <li>
     <%= render "shared/stars", percent: review.stars_as_percent %>
       <p>
