juist weergeven sterren bij de film

--- a/webdev/flix/app/assets/stylesheets/custom.scss
+++ b/webdev/flix/app/assets/stylesheets/custom.scss
@@ -207,6 +207,7 @@ section.movie-details {
     .reviews {
         .star-rating {
             margin-bottom: 0.5rem;
+            justify-content: left;
         }
     }
 }
