--- a/webdev/flix/app/views/users/show.html.erb
+++ b/webdev/flix/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <section class="user">
+<h1>Welcome, <%= @user.username %>!</h1>
   <%= profile_image(@user) %>
   <h1><%= @user.name %></h1>
   <h2><%= mail_to(@user.email) %></h2>
