--- a/webdev/flix/app/views/layouts/_header.html.erb
+++ b/webdev/flix/app/views/layouts/_header.html.erb
@@ -9,7 +9,14 @@
     <ul class="right">
     <%if current_user%>
       <li>
-      <%= link_to current_user.name, current_user %>
+        <%= link_to current_user.name.capitalize, current_user %>
+      </li>
+      <li>
+        <%= link_to "Account Settings", edit_user_path(current_user) %>
+      </li>
+      <li>
+        <%= link_to "Sign Out", session_path, method: :delete,
+                          class: "button" %>
       </li>
     <%else%>
       <li>
