--- a/webdev/flix/app/views/reviews/_show.html.erb
+++ b/webdev/flix/app/views/reviews/_show.html.erb
@@ -12,8 +12,12 @@
         <%= review.comment %>
       </p>
     </li>
-    <%= link_to "Edit", edit_movie_review_path(@movie, review), class: "button" %>
-     <%= link_to "Delete", movie_review_path(@movie, review), class: "button",
-      method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% if current_user?(@user) %>
+      <div class="actions">
+      <%= link_to "Edit", edit_movie_review_path(@movie, review), class: "button" %>
+      <%= link_to "Delete", movie_review_path(@movie, review), class: "button",
+        method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+      <%end%>
   <% end %>
 </ul>
