--- a/webdev/flix/app/views/users/show.html.erb
+++ b/webdev/flix/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <section class="user">
-<h1>Welcome, <%= @user.username %>!</h1>
+<% if current_user?(@user) %>
+    <h1>Welcome, <%= @user.username %>!</h1>
+  <% else %>
+   <h1> <%= @user.username%>'s page</h1>
+<% end %>
   <%= profile_image(@user) %>
   <h1><%= @user.name %></h1>
   <h2><%= mail_to(@user.email) %></h2>
@@ -7,9 +11,11 @@
   <p>
   <%= @user.created_at.strftime("%B %Y") %>
   </p>
+  <% if current_user?(@user) %>
     <div class="actions">
-  <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
-  <%= link_to "Delete Account", @user, method: :delete, data: {confirm: "Are you sure? This can't be undone!"},
-  class: "button delete" %>
+      <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
+      <%= link_to "Delete Account", @user, method: :delete, data: {confirm: "Are you sure? This can't be undone!"},
+        class: "button delete" %>
     </div>
+  <% end %>
 </section>
