--- a/webdev/flix/app/views/movies/show.html.erb
+++ b/webdev/flix/app/views/movies/show.html.erb
@@ -32,12 +32,15 @@
     <%= link_to "Write review", new_movie_review_path(@movie),class:"review" %>
   </div>
 </section>
-<section class="admin">
-  <%= link_to "Edit", edit_movie_path(@movie), class: "button" %>
-  <%= link_to "Delete", movie_path(@movie), class: "button",
+<%if current_user_admin?%>
+  <section class="admin">
+    <%= link_to "Edit", edit_movie_path(@movie), class: "button" %>
+    <%= link_to "Delete", movie_path(@movie), class: "button",
   method: :delete, data: { confirm: 'Are you sure?' } %>
-</section>
-<section class="admin">
-<h1>Reviews about this movie:</h1>
-<%= render "reviews/show", reviews: @movie.reviews.each %>
-</section>
+  </section>
+<%end%>
+  <section class="admin">
+  <h1>Reviews about this movie:</h1>
+  <%= render "reviews/show", reviews: @movie.reviews.each %>
+  </section>
+
