--- a/webdev/flix/app/views/reviews/_show.html.erb
+++ b/webdev/flix/app/views/reviews/_show.html.erb
@@ -12,7 +12,7 @@
         <%= review.comment %>
       </p>
     </li>
-    <% if current_user?(@user) %>
+    <% if current_user?(@user) || current_user_admin? %>
       <div class="actions">
       <%= link_to "Edit", edit_movie_review_path(@movie, review), class: "button" %>
       <%= link_to "Delete", movie_review_path(@movie, review), class: "button",
