--- a/webdev/flix/app/views/users/show.html.erb
+++ b/webdev/flix/app/views/users/show.html.erb
@@ -14,8 +14,10 @@
   <% if current_user?(@user) %>
     <div class="actions">
       <%= link_to "Edit Account", edit_user_path(@user), class: "button edit" %>
+      <% if current_user_admin? %>
       <%= link_to "Delete Account", @user, method: :delete, data: {confirm: "Are you sure? This can't be undone!"},
         class: "button delete" %>
     </div>
+    <%end%>
   <% end %>
 </section>
