--- a/webdev/flix/app/views/movies/show.html.erb
+++ b/webdev/flix/app/views/movies/show.html.erb
@@ -31,6 +31,22 @@
     </table>
     <%= link_to "Write review", new_movie_review_path(@movie),class:"review" %>
   </div>
+  <aside>
+<% if @fans.present? %>
+    <h4>Fans</h4>
+    <ul>
+      <% @fans.each do |user| %>
+        <li> 
+          <%= profile_image(user, size: 35) %> 
+        </li>
+        <li>
+          <%= link_to user.username, user %>
+        </li>
+        
+      <% end %>
+    </ul>
+  <% end %>
+</aside>
 </section>
 <%if current_user_admin?%>
   <section class="admin">
