--- a/webdev/flix/app/views/reviews/edit.html.erb
+++ b/webdev/flix/app/views/reviews/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Editing <%= @review.name %>'s review</h1>
+<h1>Editing <%= @review.user.name %>'s review</h1>
 <%= render "form", review: @review %>
