--- a/webdev/flix/app/views/layouts/_footer.html.erb
+++ b/webdev/flix/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
       <p>
-        Copyright &copy; 2005-<%= Time.now.year %>
-        <%= link_to 'The Pragmatic Studio','https://pragmaticstudio.com' %>
+        Copyright &copy; 2005-<%= Time.now.year %> and made by Wouter Dijks with help from
+        <%= link_to 'The Pragmatic Studio','https://pragmaticstudio.com' %> 
       </p>
     </footer>
