oeps. ff aparte branch aanmaken.

--- a/webdev/flix/app/views/layouts/_footer.html.erb
+++ b/webdev/flix/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
       <p>
-        Copyright &copy; 2005-<%= Time.now.year %> and made by Wouter Dijks with help from
+        Copyright &copy; 2021-<%= Time.now.year %> made by Wouter Dijks with help from
         <%= link_to 'The Pragmatic Studio','https://pragmaticstudio.com' %> 
       </p>
     </footer>
