--- a/webdev/flix/app/views/reviews/_show.html.erb
+++ b/webdev/flix/app/views/reviews/_show.html.erb
@@ -4,7 +4,7 @@
     <%= render "shared/stars", percent: review.stars_as_percent %>
       <p>
         <%= profile_image(review.user, 35) %>
-        <%= link_to review.user.name, review.user %>
+        <%= link_to review.user.username, review.user %>
         <span class="date">
           <%= time_ago_in_words(review.created_at) %> ago
         </span>
