profile_pictures for users!

--- a/webdev/flix/app/views/users/_form.html.erb
+++ b/webdev/flix/app/views/users/_form.html.erb
@@ -1,6 +1,9 @@
 <%= form_with(model: user, local: true) do |f| %>
     <%= render "shared/errors", object: user %>
 
+    <%= f.label :profile_image %>
+    <%= f.file_field :profile_image %>
+
     <%= f.label :name %>
     <%= f.text_field :name, autofocus: true %>
 
