--- a/webdev/flix/app/views/movies/show.html.erb
+++ b/webdev/flix/app/views/movies/show.html.erb
@@ -43,7 +43,7 @@
     <ul>
       <% @fans.each do |user| %>
         <li> 
-          <%= profile_image(user, size: 35) %> 
+          <%= profile_image(user, 35) %> 
         </li>
         <li>
           <%= link_to user.username, user %>
