--- a/webdev/flix/app/views/reviews/_show.html.erb
+++ b/webdev/flix/app/views/reviews/_show.html.erb
@@ -2,23 +2,26 @@
   <% @movie.reviews.each do |review| %>
     <li>
     <%= render "shared/stars", percent: review.stars_as_percent %>
-      <p>
-        <%= profile_image(review.user, 35) %>
-        <%= link_to review.user.username, review.user %>
-        <span class="date">
-          <%= time_ago_in_words(review.created_at) %> ago
-        </span>
-      </p>
+    </li>
+    <li>
+    <%= profile_image(review.user, 25) %>
+    </li>
+    <li><%= link_to review.user.username, review.user %>
+      <span class="date">
+        <%= time_ago_in_words(review.created_at) %> ago
+      </span>
+    </li>
+    <li>
       <p>
         <%= review.comment %>
       </p>
     </li>
     <% if current_user?(@user) || current_user_admin? %>
       <div class="actions">
-      <%= link_to "Edit", edit_movie_review_path(@movie, review), class: "button" %>
-      <%= link_to "Delete", movie_review_path(@movie, review), class: "button",
-        method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to "Edit", edit_movie_review_path(@movie, review), class: "button" %>
+        <%= link_to "Delete", movie_review_path(@movie, review), class: "button",
+          method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
-      <%end%>
+    <%end%>
   <% end %>
 </ul>
