--- a/webdev/React/TraversyMedia/house-marketplace/src/index.css
+++ b/webdev/React/TraversyMedia/house-marketplace/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -8,7 +8,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #f2f4f8;
   margin: 0;
   box-sizing: border-box;
@@ -37,7 +37,7 @@ button {
   height: 3rem;
   width: 100%;
   outline: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   padding: 0 3rem;
   font-size: 1rem;
 }
@@ -74,15 +74,15 @@ button {
 
 .removeIcon {
   cursor: pointer;
-  position: absolute;
-  top: -3%;
-  right: -2%;
+  /* position: absolute; */
+  /* top: -3%;
+  right: -2%; */
 }
 .editIcon {
   cursor: pointer;
-  position: absolute;
-  top: -3.4%;
-  right: 20px;
+  /* position: absolute; */
+  /* top: -3.4%;
+  right: 20px; */
 }
 
 .pageContainer,
@@ -186,12 +186,12 @@ button {
 
 .nameInput {
   margin-bottom: 2rem;
-  background: url('./assets/svg/badgeIcon.svg') #ffffff 2.5% center no-repeat;
+  background: url("./assets/svg/badgeIcon.svg") #ffffff 2.5% center no-repeat;
 }
 
 .emailInput {
   margin-bottom: 2rem;
-  background: url('./assets/svg/personIcon.svg') #ffffff 2.5% center no-repeat;
+  background: url("./assets/svg/personIcon.svg") #ffffff 2.5% center no-repeat;
 }
 
 .passwordInputDiv {
@@ -200,7 +200,7 @@ button {
 
 .passwordInput {
   margin-bottom: 2rem;
-  background: url('./assets/svg/lockIcon.svg') #ffffff 2.5% center no-repeat;
+  background: url("./assets/svg/lockIcon.svg") #ffffff 2.5% center no-repeat;
 }
 
 .showPassword {
@@ -427,7 +427,16 @@ button {
 
 .categoryListingDetails {
   width: 65%;
+  display: flex;
+  flex-direction: column;
 }
+
+.editAndDelete {
+  position: relative;
+  right: -5rem;
+  top: -5rem;
+}
+
 @media (min-width: 1024px) {
   .categoryListingDetails {
     width: 79%;
@@ -621,7 +630,7 @@ button {
 
 .logOut {
   cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   font-weight: 600;
   color: #ffffff;
@@ -753,7 +762,7 @@ button {
 .formInputFile {
   border: none;
   outline: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .formInputSmall,
 .formInputFile {
