--- a/webdev/React/TraversyMedia/support-desk/frontend/src/index.css
+++ b/webdev/React/TraversyMedia/support-desk/frontend/src/index.css
@@ -244,7 +244,7 @@ h3 {
 }
 
 .status-open {
-  background-color: steelblue;
+  background-color: #ffcc01;
   color: #fff;
   border-radius: 10px;
 }
