--- a/webdev/Elixir/chat_agent/lib/chat_agent_web/controllers/page_html/home.html.heex
+++ b/webdev/Elixir/chat_agent/lib/chat_agent_web/controllers/page_html/home.html.heex
@@ -1,44 +1,59 @@
-      <div class="flex-shrink-0 mr-4">
-        <input id="username" type="text" class="form-input rounded-md shadow-sm w-40" placeholder="Username">
-      </div>
+<div class="flex-shrink-0 mr-4">
+  <h2>Current logged in Users</h2>
+  <ul class="bg-gray-100 p-4 rounded-lg shadow-md">
+    <li id="logged-users" type="text" class="border-b border-gray-200 py-2"></li>
+  </ul>
+</div>
 <!-- component -->
 <button
-    class="fixed bottom-4 right-4 inline-flex items-center justify-center text-sm font-medium disabled:pointer-events-none disabled:opacity-50 border rounded-full w-16 h-16 bg-black hover:bg-gray-700 m-0 cursor-pointer border-gray-200 bg-none p-0 normal-case leading-5 hover:text-gray-900"
-    type="button" aria-haspopup="dialog" aria-expanded="false" data-state="closed">
-    <svg xmlns=" http://www.w3.org/2000/svg" width="30" height="40" viewBox="0 0 24 24" fill="none"
-      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-      class="text-white block border-gray-200 align-middle">
-      <path d="m3 21 1.9-5.7a8.5 8.5 0 1 1 3.8 3.8z" class="border-gray-200">
-      </path>
-    </svg>
-  </button>
+  class="fixed bottom-4 right-4 inline-flex items-center justify-center text-sm font-medium disabled:pointer-events-none disabled:opacity-50 border rounded-full w-16 h-16 bg-black hover:bg-gray-700 m-0 cursor-pointer border-gray-200 bg-none p-0 normal-case leading-5 hover:text-gray-900"
+  type="button"
+  aria-haspopup="dialog"
+  aria-expanded="false"
+  data-state="closed"
+>
+  <svg
+    xmlns=" http://www.w3.org/2000/svg"
+    width="30"
+    height="40"
+    viewBox="0 0 24 24"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="2"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    class="text-white block border-gray-200 align-middle"
+  >
+    <path d="m3 21 1.9-5.7a8.5 8.5 0 1 1 3.8 3.8z" class="border-gray-200"></path>
+  </svg>
+</button>
 
-
-  <div style="box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgb(0 0 0 / 0.05);"
-    class="fixed bottom-[calc(4rem+1.5rem)] right-0 mr-4 bg-white p-6 rounded-lg border border-[#e5e7eb] w-[440px] h-[634px]">
-
-    <!-- Heading -->
-    <div class="flex flex-col space-y-1.5 pb-6">
-      <h2 class="font-semibold text-lg tracking-tight">Chat Agent <span id="username"></span></h2>
-      <p class="text-sm text-[#6b7280] leading-3">Powered By Phoenix LiveView!</p>
-    </div>
-
-    <!-- Chat Container -->
-    <div id="messages" class="pr-4 h-[474px]" style="min-width: 100%; display: table;">
-      
-    </div>
-    <!-- Input box  -->
-    <div class="flex items-center pt-0">
-    <%!-- <form class="flex items-center justify-center w-full space-x-2"> --%>
-        <input
-          class="flex h-10 w-full rounded-md border border-[#e5e7eb] px-3 py-2 text-sm placeholder-[#6b7280] focus:outline-none focus:ring-2 focus:ring-[#9ca3af] disabled:cursor-not-allowed disabled:opacity-50 text-[#030712] focus-visible:ring-offset-2"
-          id="chat-input"
-          placeholder="Type your message" >
-        <button
-          id="send-button"
-          type='button'
-          class="inline-flex items-center justify-center rounded-md text-sm font-medium text-[#f9fafb] disabled:pointer-events-none disabled:opacity-50 bg-black hover:bg-[#111827E6] h-10 px-4 py-2">
-          Send</button>
-          <%!-- </form> --%>
-    </div>
+<div
+  style="box-shadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgb(0 0 0 / 0.05);"
+  class="fixed bottom-[calc(4rem+1.5rem)] right-0 mr-4 bg-white p-6 rounded-lg border border-[#e5e7eb] w-[440px] h-[634px]"
+>
+  <!-- Heading -->
+  <div class="flex flex-col space-y-1.5 pb-6">
+    <h2 class="font-semibold text-lg tracking-tight">Chat Agent <span id="username"></span></h2>
+    <p class="text-sm text-[#6b7280] leading-3">Powered By Phoenix LiveView!</p>
   </div>
+  <!-- Chat Container -->
+  <div id="messages" class="pr-4 h-[474px]" style="min-width: 100%; display: table;"></div>
+  <!-- Input box  -->
+  <div class="flex items-center pt-0">
+    <%!-- <form class="flex items-center justify-center w-full space-x-2"> --%>
+    <input
+      class="flex h-10 w-full rounded-md border border-[#e5e7eb] px-3 py-2 text-sm placeholder-[#6b7280] focus:outline-none focus:ring-2 focus:ring-[#9ca3af] disabled:cursor-not-allowed disabled:opacity-50 text-[#030712] focus-visible:ring-offset-2"
+      id="chat-input"
+      placeholder="Type your message"
+    />
+    <button
+      id="send-button"
+      type="button"
+      class="inline-flex items-center justify-center rounded-md text-sm font-medium text-[#f9fafb] disabled:pointer-events-none disabled:opacity-50 bg-black hover:bg-[#111827E6] h-10 px-4 py-2"
+    >
+      Send
+    </button>
+    <%!-- </form> --%>
+  </div>
+</div>
